--- a/source/le_scuole.html.erb
+++ b/source/le_scuole.html.erb
@@ -1,30 +1,34 @@
-<ul class="breadcrumbs">
-  <li><%= link_to 'Home', '/index.html', class: 'breadcrumbs__home' %></li>
-  <li><%= link_to 'Le scuole', '/le_scuole.html', class: 'breadcrumbs__le-scuole' %></li>
-</ul>
-<section class="card">
-  <%= link_to 'Scuola dell\'infanzia San Giuseppe', '/scuole/san_giuseppe.html', class: 'card__school-link' %>
-  <figure>
-    <% link_to '/scuole/san_giuseppe.html' do %>
-      <%= image_tag 'example1.jpg', class: 'card__school-photo' %>
-    <% end %>
-  </figure>
-</section>
+<section class="grid-container">
+  <ul class="breadcrumbs">
+    <li><%= link_to 'Home', '/index.html', class: 'breadcrumbs__home' %></li>
+    <li><%= link_to 'Le scuole', '/le_scuole.html', class: 'breadcrumbs__le-scuole' %></li>
+  </ul>
+  <%
+  list = [
+    {
+      url: '/scuole/san_giuseppe.html',
+      label: 'Scuola dell\'infanzia San Giuseppe',
+      image_path: 'example1.jpg',
+    },
+    {
+      url: '/scuole/san_giorgio.html',
+      label: 'Scuola dell\'infanzia San Giorgio',
+      image_path: 'example2.jpg',
+    },
+    {
+      url: '/scuole/san_vincenzo.html',
+      label: 'Scuola dell\'infanzia San Vincenzo',
+      image_path: 'example3.jpg',
+    },
+  ]
+  %>
 
-<section class="card">
-  <%= link_to 'Scuola dell\'infanzia San Giorgio', '/scuole/san_giorgio.html', class: 'card__school-link' %>
-  <figure>
-    <% link_to '/scuole/san_giorgio.html' do %>
-      <%= image_tag 'example2.jpg', class: 'card__school-photo' %>
-    <% end %>
-  </figure>
-</section>
-
-<section class="card">
-  <%= link_to 'Scuola dell\'infanzia paritaria San Vincenzo', '/scuole/san_vincenzo.html', class: 'card__school-link' %>
-  <figure>
-    <% link_to '/scuole/san_vincenzo.html' do %>
-      <%= image_tag 'example3.jpg', class: 'card__school-photo' %>
-    <% end %>
-  </figure>
+  <% list.each do |item| %>
+    <section class="school-card">
+      <%= link_to item[:label], item[:url], class: 'link font-title' %>
+      <% link_to item[:url] do %>
+        <%= image_tag item[:image_path], class: 'cover-image' %>
+      <% end %>
+    </section>
+  <% end %>
 </section>
