--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="grid-container">
   <ul class="breadcrumbs">
     <li><%= link_to 'HOME', '/index.html', class: 'breadcrumbs__home' %></li>
   </ul>
@@ -41,15 +41,11 @@
   <div class="documents-list">
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <a class="scuola-in-chiaro" href="/scuole_in_chiaro.html">
-        Scuola in chiaro
-      </a>
+      <%= link_to 'Scuola in chiaro', '/scuole_in_chiaro.html', class: 'link' %>
     </div>
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <a class="calendario" href="link-direct-download">
-        Calendario giorni festivi
-      </a>
+      <%= link_to 'Calendario giorni festivi', 'link-direct-download', class: 'link' %>
     </div>
   </div>
 </section>
