--- a/source/stylesheets/_timeline.css.scss
+++ b/source/stylesheets/_timeline.css.scss
@@ -5,7 +5,7 @@
     position: relative;
     padding: 10px;
     border-left: 3px solid $site-primary-color;
-    & > .card {
+    & > .section-card {
       margin-bottom: 2rem;
     }
   }
@@ -29,28 +29,17 @@
   }
 }
 
-.timeline__card {
-  padding: 1rem;
-  border: 3px solid $site-primary-color;
-  border-radius: 2px;
-  margin-top: 2rem;
-}
+// .timeline__icon {
+//   width: 50px;
+// }
 
-
-.timeline__icon {
-  width: 50px;
-  height: auto;
-  justify-content: center;
-  vertical-align: middle;
-}
-
-.timeline__button {
-  box-shadow: 1px 1px black;
-  padding: 0.5rem 2rem;
-  text-transform: uppercase;
-  width: min-width;
-  border: 2px solid $site-primary-color;
-  border-radius: 10px;
-  text-align: center;
-  color: $site-primary-color;
-}
+// .timeline__button {
+//   box-shadow: 1px 1px black;
+//   padding: 0.5rem 2rem;
+//   text-transform: uppercase;
+//   width: min-width;
+//   border: 2px solid $site-primary-color;
+//   border-radius: 10px;
+//   text-align: center;
+//   color: $site-primary-color;
+// }
