--- a/source/stylesheets/_timeline.css.scss
+++ b/source/stylesheets/_timeline.css.scss
@@ -29,17 +29,6 @@
   }
 }
 
-// .timeline__icon {
-//   width: 50px;
-// }
-
-// .timeline__button {
-//   box-shadow: 1px 1px black;
-//   padding: 0.5rem 2rem;
-//   text-transform: uppercase;
-//   width: min-width;
-//   border: 2px solid $site-primary-color;
-//   border-radius: 10px;
-//   text-align: center;
-//   color: $site-primary-color;
-// }
+.timeline__icon {
+  width: 50px;
+}
