--- a/source/scuole/san_giorgio.html.erb
+++ b/source/scuole/san_giorgio.html.erb
@@ -1,12 +1,11 @@
-<ul class="breadcrumbs">
-  <li><%= link_to 'Home', '/index.html' %></li>
-  <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
-  <li><%= link_to 'San Giorgio', '/scuole/san_giorgio.html' %></li>
-</ul>
+<section class="grid-container">
+  <ul class="breadcrumbs">
+    <li><%= link_to 'Home', '/index.html' %></li>
+    <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
+    <li><%= link_to 'San Giorgio', '/scuole/san_giorgio.html' %></li>
+  </ul>
 
-<%= image_tag 'example1.jpg', class: 'cover-image' %>
-
-<section>
+  <%= image_tag 'example1.jpg', class: 'cover-image' %>
   <h1 class="title">
     Storia
   </h1>
@@ -17,38 +16,38 @@
 
 <div class="gallery">
   <figure class="gallery-card">
-    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'card__image' %>
     <% end %>
-    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
+    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
   </figure>
   <figure class="gallery-card">
-    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'card__image' %>
     <% end %>
-    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
+    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
   </figure>
   <figure class="gallery-card">
-    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'card__image' %>
     <% end %>
-    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
   </figure>
   <figure class="gallery-card">
-    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'card__image' %>
     <% end %>
-    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
+    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
   </figure>
   <figure class="gallery-card">
-    <% link_to '/scuole/san_giorgio.html', class:'gallery-card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'gallery-card__image' %>
+    <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+      <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'card__image' %>
     <% end %>
-    <figcaption class="gallery-card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
+    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
   </figure>
 </div>
 
-<section>
+<section class="grid-container">
   <table class="table">
     <thead>
       <tr>
@@ -102,9 +101,6 @@
       </tr>
     </tbody>
   </table>
-</section>
-
-<section class="grid-container">
   <div class="team">
     <h1 class="title">Il team</h1>
     <%= image_tag 'teacher.jpeg', class: 'cover-image' %>
@@ -112,17 +108,17 @@
   </div>
   <div class="card-container">
     <div class="section-card">
-      <h1 class="title">Progetti in corso</h1>
-      <div class="card-body">
+      <h1 class="title section-card__title">Progetti in corso</h1>
+      <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <%= link_to 'Scopri', '/scuole/san_giorgio/progetti_in_corso.html', class: 'button' %>
+        <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti_in_corso.html', class: 'button button--card-action' %>
       </div>
     </div>
     <div class="section-card">
-      <h1 class="title">Eventi</h1>
-      <div class="card-body">
+      <h1 class="title section-card__title">Eventi</h1>
+      <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <%= link_to 'Scopri', '/scuole/san_giorgio/eventi.html', class:'button' %>
+        <%= link_to 'Scopri', '/scuole/san_giuseppe/eventi.html', class:'button button--card-action' %>
       </div>
     </div>
   </div>
@@ -130,7 +126,7 @@
     <h1 class="title">Contatti</h1>
     <p class="text">
       Via Conciliazione 9 20832 Desio<br />
-      Email:<%= link_to 'materna.sangiuseppe@tiscali.it', 'mailto:materna.sangiuseppe@tiscali.it' %> <br />
+      Email:<%= link_to 'materna.sangiuseppe@tiscali.it', 'mailto:materna.sangiuseppe@tiscali.it', class: 'link' %> <br />
       Tel./Fax: 0362 622042<br />
     </p>
   </div>
@@ -138,21 +134,15 @@
   <div class="documents-list">
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <a class="pagina-social" href="https://www.facebook.com/Scuola-dellInfanzia-San-Giuseppe-Desio-144760232830033/">
-        Pagina Social
-      </a>
+      <%= link_to 'Pagina social', 'https://www.facebook.com/Scuola-dellInfanzia-San-Giuseppe-Desio-144760232830033/', class: 'link' %>
     </div>
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <a class="forum" href="https://infanziasangiuseppe.desio.org/">
-        Forum
-      </a>
+      <%= link_to 'Forum', 'https://infanziasangiuseppe.desio.org/', class: 'link' %>
     </div>
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <a class="calendario" href="download">
-        Calendario giorni festivi
-      </a>
+      <%= link_to 'Caledario giorni festivi', 'download', class: 'link' %>
     </div>
   </div>
 </section>
