--- a/source/scuole/school.html.erb
+++ b/source/scuole/school.html.erb
@@ -2,52 +2,50 @@
   <ul class="breadcrumbs">
     <li><%= link_to 'Home', '/index.html' %></li>
     <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
-    <li><%= link_to 'San Giuseppe', '/scuole/san_giuseppe.html' %></li>
+    <li><%= link_to school[:label], "/scuole/#{school[:slug]}.html" %></li>
   </ul>
 
-  <%= image_tag 'example1.jpg', class: 'cover-image' %>
+  <%= image_tag school[:cover], class: 'cover-image' %>
   <h1 class="title">
     Storia
   </h1>
   <p class="text">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
-</section>
 
-<div class="gallery">
-  <figure class="gallery-card">
-    <% link_to '/scuole/san_giuseppe.html', class:'card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'card__image' %>
-    <% end %>
-    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
-  </figure>
-  <figure class="gallery-card">
-    <% link_to '/scuole/san_giuseppe.html', class:'card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'card__image' %>
-    <% end %>
-    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
-  </figure>
-  <figure class="gallery-card">
-    <% link_to '/scuole/san_giuseppe.html', class:'card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'card__image' %>
-    <% end %>
-    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-  </figure>
-  <figure class="gallery-card">
-    <% link_to '/scuole/san_giuseppe.html', class:'card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'card__image' %>
-    <% end %>
-    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
-  </figure>
-  <figure class="gallery-card">
-    <% link_to '/scuole/san_giuseppe.html', class:'card__link' do %>
-      <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'card__image' %>
-    <% end %>
-    <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
-  </figure>
-</div>
+  <div class="gallery">
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1503676260728-1c00da094a0b?fit=crop&w=200&h=200', class: 'card__image' %>
+      <% end %>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</figcaption>
+    </figure>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504275107627-0c2ba7a43dba?fit=crop&w=200&h=200', class: 'card__image' %>
+      <% end %>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</figcaption>
+    </figure>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1484820540004-14229fe36ca4?fit=crop&w=200&h=200', class: 'card__image' %>
+      <% end %>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+    </figure>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1457978535446-dcd58011ea54?fit=crop&w=200&h=200', class: 'card__image' %>
+      <% end %>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
+    </figure>
+    <figure class="gallery-card">
+      <% link_to '/scuole/san_giorgio.html', class:'card__link' do %>
+        <%= image_tag 'https://images.unsplash.com/photo-1504169448388-60f322bebb2c?fit=crop&w=200&h=200', class: 'card__image' %>
+      <% end %>
+      <figcaption class="card__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</figcaption>
+    </figure>
+  </div>
 
-<section class="grid-container">
   <table class="table">
     <thead>
       <tr>
@@ -111,14 +109,14 @@
       <h1 class="title section-card__title">Progetti in corso</h1>
       <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <%= link_to 'Scopri', '/scuole/san_giuseppe/progetti_in_corso.html', class: 'button button--card-action' %>
+        <%= link_to 'Scopri', "/scuole/#{school[:slug]}/progetti_in_corso.html", class: 'button button--card-action' %>
       </div>
     </div>
     <div class="section-card">
       <h1 class="title section-card__title">Eventi</h1>
       <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <%= link_to 'Scopri', '/scuole/san_giuseppe/eventi.html', class:'button button--card-action' %>
+        <%= link_to 'Scopri', "/scuole/#{school[:slug]}/eventi.html", class:'button button--card-action' %>
       </div>
     </div>
   </div>
