title timeline centering

--- a/source/scuole/events.html.erb
+++ b/source/scuole/events.html.erb
@@ -32,7 +32,7 @@ list = [
     <li>
       <span class="timeline__label"><%= item[:date] %></span>
       <div class="section-card timeline__card">
-        <h1 class="section-card__title"><%= item[:title] %></h1>
+        <h1 class="section-card__title text-center"><%= item[:title] %></h1>
         <%= image_tag item[:icon_path], class: 'timeline__icon' %>
         <p class="section-card__label"><%= item[:category] %></p>
         <div class="section-card__body">
