Refactors event data and prepares an empty event page.

--- a/source/scuole/events.html.erb
+++ b/source/scuole/events.html.erb
@@ -5,39 +5,18 @@
   <li><%= link_to 'Eventi', "/scuole/#{school[:slug]}/eventi.html" %></li>
 </ul>
 
-<%
-list = [
-  {
-    date: '2019-07-12',
-    title: 'Evento 1',
-    icon_path: 'peda-icon.jpg',
-    category: 'Pedagogico',
-    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.',
-    link: 'https://foo.bar',
-  },
-  {
-    date: '2019-07-16',
-    title: 'Evento 2',
-    icon_path: 'amm-icon.png',
-    category: 'Amministrazione',
-    description: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.',
-    link: 'https://foo.bar',
-  },
-]
-%>
-
 <section>
   <ol class="timeline">
-    <% list.each do |item| %>
+    <% events.each do |event| %>
     <li>
-      <span class="timeline__label"><%= item[:date] %></span>
+      <span class="timeline__label"><%= event[:date] %></span>
       <div class="section-card timeline__card">
-        <h1 class="section-card__title text-center"><%= item[:title] %></h1>
-        <%= image_tag item[:icon_path], class: 'timeline__icon' %>
-        <p class="section-card__label"><%= item[:category] %></p>
+        <h1 class="section-card__title text-center"><%= event[:title] %></h1>
+        <%= image_tag event[:icon_path], class: 'timeline__icon' %>
+        <p class="section-card__label"><%= event[:category] %></p>
         <div class="section-card__body">
-          <p class="section-card__text"><%= item[:description] %></p>
-          <%= link_to 'Scopri', item[:link], class:'button button--card-action' %>
+          <p class="section-card__text"><%= event[:description] %></p>
+          <%= link_to 'Scopri', "/scuole/#{school[:slug]}/eventi/#{event[:slug]}.html", class:'button button--card-action' %>
         </div>
       </div>
     </li>
