--- a/source/scuole/events.html.erb
+++ b/source/scuole/events.html.erb
@@ -11,7 +11,7 @@
     <li>
       <span class="timeline__label"><%= event[:date] %></span>
       <div class="section-card timeline__card">
-        <h1 class="section-card__title text-center"><%= event[:title] %></h1>
+        <h1 class="section-card__title text-center font-title"><%= event[:title] %></h1>
         <%= image_tag event[:icon_path], class: 'timeline__icon' %>
         <p class="section-card__label"><%= event[:category] %></p>
         <div class="section-card__body">
