--- a/source/scuole/school.html.erb
+++ b/source/scuole/school.html.erb
@@ -106,14 +106,14 @@
   </div>
   <div class="card-container">
     <div class="section-card">
-      <h1 class="title section-card__title">Progetti in corso</h1>
+      <h1 class="section-card__title font-title">Progetti in corso</h1>
       <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <%= link_to 'Scopri', "/scuole/#{school[:slug]}/progetti_in_corso.html", class: 'button button--card-action' %>
       </div>
     </div>
     <div class="section-card">
-      <h1 class="title section-card__title">Eventi</h1>
+      <h1 class="section-card__title font-title">Eventi</h1>
       <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <%= link_to 'Scopri', "/scuole/#{school[:slug]}/eventi.html", class:'button button--card-action' %>
