--- a/source/scuole/project.html.erb
+++ b/source/scuole/project.html.erb
@@ -8,7 +8,7 @@
   </ul>
 
   <div class="section-card">
-    <h1 class="section-card__title"><%= project[:title] %></h1>
+    <h1 class="section-card__title font-title"><%= project[:title] %></h1>
     <%= image_tag project[:cover], class: 'cover-image' %>
     <p class="section-card__date"><%= project[:date] %></p>
     <p class="text"><%= project[:text] %></p>
