26 Adds the component "event info".

--- a/source/stylesheets/_cards.css.scss
+++ b/source/stylesheets/_cards.css.scss
@@ -80,3 +80,26 @@
   border: 3px solid #505151;
   border-radius: 2px;
 }
+
+.event-info {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.event-info__date {
+  margin: 0;
+}
+
+.event-info__category {
+  display: grid;
+  grid-template-rows: 1fr min-content;
+  grid-gap: 1rem;
+  justify-items: center;
+}
+
+
+.event-info__category__label {
+    margin: 0;
+}
