--- a/source/scuole/event.html.erb
+++ b/source/scuole/event.html.erb
@@ -8,10 +8,12 @@
   </ul>
 
   <div class="section-card">
-    <p class="section-card__date"><%= event[:date] %></p>
-    <div class="event">
-      <%= image_tag event[:icon_path], class: 'document-icon' %>
-      <p class="section-card__label"><%= event[:category] %></p>
+    <div class="event-info">
+      <p class="event-info__date"><%= event[:date] %></p>
+      <div class="event-info__category">
+        <%= image_tag event[:icon_path], class: 'document-icon' %>
+        <p class="event-info__category__label"><%= event[:category] %></p>
+      </div>
     </div>
     <h1 class="section-card__title font-title"><%= event[:title] %></h1>
     <p class="text"><%= event[:description] %></p>
