--- a/source/explorer/calendar.html.erb
+++ b/source/explorer/calendar.html.erb
@@ -16,7 +16,7 @@
         <p class="section-card__label"><%= event[:category] %></p>
         <div class="section-card__body">
           <p class="section-card__text"><%= event[:description] %></p>
-          <%= link_to 'Scopri', "/scuole/#{school[:slug]}/eventi/#{event[:slug]}.html", class:'button button--card-action' %>
+          <%= link_to 'Scopri', .html", class:'button button--card-action' %>
         </div>
       </div>
     </li>
