--- a/source/esploratori.html.erb
+++ b/source/esploratori.html.erb
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="section-card">
-      <h1 class="section-card__title font-title">Calendario</h1>
+      <h1 class="section-card__title font-title">Calendario Esploratori</h1>
       <div class="section-card__body">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <%= link_to 'Scopri', "/esploratori/calendario.html", class:'button button--card-action' %>
