--- a/source/explorer/calendar.html.erb
+++ b/source/explorer/calendar.html.erb
@@ -2,10 +2,10 @@
   <ul class="breadcrumbs">
     <li><%= link_to 'Home', '/index.html' %></li>
     <li><%= link_to 'Esploratori', '/esploratori.html' %></li>
-    <li><%= link_to 'Calendario', '/esploratori/calendario.html' %></li>
+    <li><%= link_to 'Calendario Esploratori', '/esploratori/calendario.html' %></li>
   </ul>
 
-  <h1 class="title">Calendario</h1>
+  <h1 class="title">Calendario Esploratori</h1>
   <ol class="timeline">
     <% explorer_events.each do |event| %>
     <li>
