--- a/source/explorer/calendar/event.html.erb
+++ b/source/explorer/calendar/event.html.erb
@@ -1,7 +1,8 @@
 <section class="grid-container">
   <ul class="breadcrumbs">
     <li><%= link_to 'Home', '/index.html' %></li>
-    <li><%= link_to 'Calendario', '/esploratori/calendario.html' %></li>
+    <li><%= link_to 'Esploratori', '/esploratori.html' %></li>
+    <li><%= link_to 'Calendario Esploratori', '/esploratori/calendario.html' %></li>
     <li><%= link_to event[:title], "/esploratori/calendario/#{event[:slug]}.html" %></li>
   </ul>
 
