--- a/source/explorer/calendar/event.html.erb
+++ b/source/explorer/calendar/event.html.erb
@@ -2,7 +2,7 @@
   <ul class="breadcrumbs">
     <li><%= link_to 'Home', '/index.html' %></li>
     <li><%= link_to 'Esploratori', '/esploratori.html' %></li>
-    <li><%= link_to 'Calendario Esploratori', '/esploratori/calendario.html' %></li>
+    <li><%= link_to 'Calendario', '/esploratori/calendario.html' %></li>
     <li><%= link_to event[:title], "/esploratori/calendario/#{event[:slug]}.html" %></li>
   </ul>
 
