--- a/source/school_in_clear.html.erb
+++ b/source/school_in_clear.html.erb
@@ -15,7 +15,7 @@
         <div class="section-card__body">
           <p class="text"><%= [:text] %></p>
           <p class="section-card__date"><%= [:update] %></p>
-          <%= link_to 'Scarica', "download", class: 'button button--card-action' %>
+          <%= link_to 'Scarica', [:url], class: 'button button--card-action' %>
         </div>
       </section>
     <% end %>
