--- a/source/school_in_clear.html.erb
+++ b/source/school_in_clear.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="grid-container">
   <ul class="breadcrumbs">
     <li><%= link_to 'Home', '/index.html' %></li>
     <li><%= link_to 'Scuole in chiaro', '/scuole_in_chiaro.html' %></li>
