--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -24,6 +24,7 @@ $site-primary-color: #282A2E;
 @import '_buttons.css.scss';
 @import '_cards.css.scss';
 @import '_timeline.css.scss';
+@import '_date.css.scss';
 
 * {
   box-sizing: border-box;
