--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -45,7 +45,7 @@
     </div>
     <div class="documents-list__item">
       <%= image_tag 'document-icon.png', class: 'document-icon' %>
-      <%= link_to 'Calendario giorni festivi', 'link-direct-download', class: 'link' %>
+      <%= link_to 'Calendario giorni festivi', 'https://www.cortecostituzionale.it/documenti/download/pdf/Costituzione_della_Repubblica_italiana.pdf', class: 'link' %>
     </div>
   </div>
 </section>
