--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -34,13 +34,9 @@
           Via Conciliazione, 9 - 20832 Desio(MB)<br />
           Tel./Fax 0362 622042
         </p>
-        <a class="footer-item" href="mailto:materna.sangiuseppe@tiscali.it">materna.sangiuseppe@tiscali.it</a>
-        <a class="footer-item" href="/scuole_in_chiaro.html">
-          Scuola in chiaro
-        </a>
-        <a class="footer-item" href="link-direct-download">
-          Calendario giorni festivi
-        </a>
+        <%= link_to 'materna.sangiuseppe@tiscali.it', 'mailto:materna.sangiuseppe@tiscali.it', class: 'footer-item' %>
+        <%= link_to 'Scuola in chiaro', '/scuole_in_chiaro.html', class: 'footer-item' %>
+        <%= link_to 'Calendario giorni festivi', 'https://www.cortecostituzionale.it/documenti/download/pdf/Costituzione_della_Repubblica_italiana.pdf', class: 'footer-item' %>
       </div>
     </footer>
   </body>
