--- a/source/scuole/events.html.erb
+++ b/source/scuole/events.html.erb
@@ -1,11 +1,12 @@
-<ul class="breadcrumbs">
-  <li><%= link_to 'Home', '/index.html' %></li>
-  <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
-  <li><%= link_to school[:label], "/scuole/#{school[:slug]}.html" %></li>
-  <li><%= link_to 'Eventi', "/scuole/#{school[:slug]}/eventi.html" %></li>
-</ul>
+<section class="grid-container">
+  <ul class="breadcrumbs">
+    <li><%= link_to 'Home', '/index.html' %></li>
+    <li><%= link_to 'Le scuole', '/le_scuole.html' %></li>
+    <li><%= link_to school[:label], "/scuole/#{school[:slug]}.html" %></li>
+    <li><%= link_to 'Eventi', "/scuole/#{school[:slug]}/eventi.html" %></li>
+  </ul>
 
-<section>
+  <h1 class="title">Eventi</h1>
   <ol class="timeline">
     <% events.each do |event| %>
     <li>
