30 🚧 Setups DatoCMS integration.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,7 +12,7 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
-    <title>Scuole Parrocchiali Desio</title>
+    <title><%= dato.site.name %></title>
   </head>
   <body class="page-layout">
     <header>
